js/src/tests/test262/language/module-code/ambiguous-export-bindings/error-import-named.js












































$DONOTEVALUATE();

import { x } from './error-import-named_FIXTURE.js';
